// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Должен вернуть ХК для: марка AUDI 1`] = `
Array [
  Object {
    "caption": "Продажа автомобилей",
    "name": "index",
    "route": "index",
    "urlOptions": Object {
      "geoIds": Array [],
    },
    "urlParams": Object {
      "category": undefined,
      "section": undefined,
    },
  },
  Object {
    "caption": "Audi",
    "name": "mark",
    "route": "listing",
    "urlParams": Object {
      "category": "cars",
      "mark": "AUDI",
      "section": undefined,
    },
  },
  Object {
    "caption": "Audi 3.0л",
    "name": "displacement",
    "route": "listing",
    "urlParams": Object {
      "catalog_equipment": undefined,
      "catalog_filter": Array [
        Object {
          "mark": "AUDI",
          "nameplate_name": "g_tron",
        },
      ],
      "category": "cars",
      "displacement_from": 3000,
      "displacement_to": 3000,
      "section": "all",
      "transmission": undefined,
    },
  },
  Object {
    "caption": "Audi 3.0л 5-местный",
    "name": "seats",
    "route": "listing",
    "urlParams": Object {
      "catalog_equipment": Array [
        "seats-5",
      ],
      "catalog_filter": Array [
        Object {
          "mark": "AUDI",
          "nameplate_name": "g_tron",
        },
      ],
      "category": "cars",
      "displacement_from": 3000,
      "displacement_to": 3000,
      "section": "all",
      "transmission": undefined,
    },
  },
]
`;

exports[`Должен вернуть ХК для: марка AUDI и трансмиссия 1`] = `
Array [
  Object {
    "caption": "Продажа автомобилей",
    "name": "index",
    "route": "index",
    "urlOptions": Object {
      "geoIds": Array [],
    },
    "urlParams": Object {
      "category": undefined,
      "section": undefined,
    },
  },
  Object {
    "caption": "Audi",
    "name": "mark",
    "route": "listing",
    "urlParams": Object {
      "category": "cars",
      "mark": "AUDI",
      "section": undefined,
    },
  },
  Object {
    "caption": "Audi 3.0л",
    "name": "displacement",
    "route": "listing",
    "urlParams": Object {
      "catalog_equipment": undefined,
      "catalog_filter": Array [
        Object {
          "mark": "AUDI",
          "nameplate_name": "g_tron",
        },
      ],
      "category": "cars",
      "displacement_from": 3000,
      "displacement_to": 3000,
      "section": "all",
      "transmission": undefined,
    },
  },
  Object {
    "caption": "Audi 3.0л 5-местный",
    "name": "seats",
    "route": "listing",
    "urlParams": Object {
      "catalog_equipment": Array [
        "seats-5",
      ],
      "catalog_filter": Array [
        Object {
          "mark": "AUDI",
          "nameplate_name": "g_tron",
        },
      ],
      "category": "cars",
      "displacement_from": 3000,
      "displacement_to": 3000,
      "section": "all",
      "transmission": undefined,
    },
  },
  Object {
    "caption": "Audi 3.0л 5-местный с МКПП",
    "name": "transmission",
    "route": "listing",
    "urlParams": Object {
      "catalog_equipment": Array [
        "seats-5",
      ],
      "catalog_filter": Array [
        Object {
          "mark": "AUDI",
          "nameplate_name": "g_tron",
        },
      ],
      "category": "cars",
      "displacement_from": 3000,
      "displacement_to": 3000,
      "section": "all",
      "transmission": Array [
        "MECHANICAL",
      ],
    },
  },
]
`;

exports[`Должен вернуть ХК для: марка AUDI, модель A5 1`] = `
Array [
  Object {
    "caption": "Продажа автомобилей",
    "name": "index",
    "route": "index",
    "urlOptions": Object {
      "geoIds": Array [],
    },
    "urlParams": Object {
      "category": undefined,
      "section": undefined,
    },
  },
  Object {
    "caption": "Audi",
    "name": "mark",
    "route": "listing",
    "urlParams": Object {
      "category": "cars",
      "mark": "AUDI",
      "section": undefined,
    },
  },
  Object {
    "caption": "Audi A5",
    "name": "model",
    "route": "listing",
    "urlParams": Object {
      "category": "cars",
      "mark": "AUDI",
      "model": "A5",
      "section": "all",
    },
  },
  Object {
    "caption": "Audi A5 3.0л",
    "name": "displacement",
    "route": "listing",
    "urlParams": Object {
      "catalog_equipment": undefined,
      "catalog_filter": Array [
        Object {
          "mark": "AUDI",
          "model": "A5",
          "nameplate_name": "g_tron",
        },
      ],
      "category": "cars",
      "displacement_from": 3000,
      "displacement_to": 3000,
      "section": "all",
      "transmission": undefined,
    },
  },
  Object {
    "caption": "Audi A5 3.0л 5-местный",
    "name": "seats",
    "route": "listing",
    "urlParams": Object {
      "catalog_equipment": Array [
        "seats-5",
      ],
      "catalog_filter": Array [
        Object {
          "mark": "AUDI",
          "model": "A5",
          "nameplate_name": "g_tron",
        },
      ],
      "category": "cars",
      "displacement_from": 3000,
      "displacement_to": 3000,
      "section": "all",
      "transmission": undefined,
    },
  },
]
`;

exports[`Должен вернуть ХК для: марка AUDI, модель A5, поколение II (F5) Рестайлинг 1`] = `
Array [
  Object {
    "caption": "Продажа автомобилей",
    "name": "index",
    "route": "index",
    "urlOptions": Object {
      "geoIds": Array [],
    },
    "urlParams": Object {
      "category": undefined,
      "section": undefined,
    },
  },
  Object {
    "caption": "Audi",
    "name": "mark",
    "route": "listing",
    "urlParams": Object {
      "category": "cars",
      "mark": "AUDI",
      "section": undefined,
    },
  },
  Object {
    "caption": "Audi A5",
    "name": "model",
    "route": "listing",
    "urlParams": Object {
      "category": "cars",
      "mark": "AUDI",
      "model": "A5",
      "section": "all",
    },
  },
  Object {
    "caption": "Audi A5 II (F5) Рестайлинг",
    "name": "generation",
    "route": "listing",
    "urlParams": Object {
      "category": "cars",
      "generation": "21745628",
      "mark": "AUDI",
      "model": "A5",
      "section": "all",
    },
  },
  Object {
    "caption": "Audi A5 II (F5) Рестайлинг 3.0л",
    "name": "displacement",
    "route": "listing",
    "urlParams": Object {
      "catalog_equipment": undefined,
      "catalog_filter": Array [
        Object {
          "generation": "21745628",
          "mark": "AUDI",
          "model": "A5",
          "nameplate_name": "g_tron",
        },
      ],
      "category": "cars",
      "displacement_from": 3000,
      "displacement_to": 3000,
      "section": "all",
      "transmission": undefined,
    },
  },
  Object {
    "caption": "Audi A5 II (F5) Рестайлинг 3.0л 5-местный",
    "name": "seats",
    "route": "listing",
    "urlParams": Object {
      "catalog_equipment": Array [
        "seats-5",
      ],
      "catalog_filter": Array [
        Object {
          "generation": "21745628",
          "mark": "AUDI",
          "model": "A5",
          "nameplate_name": "g_tron",
        },
      ],
      "category": "cars",
      "displacement_from": 3000,
      "displacement_to": 3000,
      "section": "all",
      "transmission": undefined,
    },
  },
]
`;

exports[`Должен вернуть ХК для: марка AUDI, модель A5, поколение II (F5) Рестайлинг c пробегом 1`] = `
Array [
  Object {
    "caption": "Продажа автомобилей",
    "name": "index",
    "route": "index",
    "urlOptions": Object {
      "geoIds": Array [],
    },
    "urlParams": Object {
      "category": undefined,
      "section": undefined,
    },
  },
  Object {
    "caption": "Audi",
    "name": "mark",
    "route": "listing",
    "urlParams": Object {
      "category": "cars",
      "mark": "AUDI",
      "section": undefined,
    },
  },
  Object {
    "caption": "Audi с пробегом",
    "name": "mark-with-section",
    "route": "listing",
    "urlParams": Object {
      "category": "cars",
      "mark": "AUDI",
      "section": "used",
    },
  },
  Object {
    "caption": "Audi A5 с пробегом",
    "name": "model",
    "route": "listing",
    "urlParams": Object {
      "category": "cars",
      "mark": "AUDI",
      "model": "A5",
      "section": "used",
    },
  },
  Object {
    "caption": "Audi A5 II (F5) Рестайлинг с пробегом",
    "name": "generation",
    "route": "listing",
    "urlParams": Object {
      "category": "cars",
      "generation": "21745628",
      "mark": "AUDI",
      "model": "A5",
      "section": "used",
    },
  },
  Object {
    "caption": "Audi A5 II (F5) Рестайлинг 3.0л с пробегом",
    "name": "displacement",
    "route": "listing",
    "urlParams": Object {
      "catalog_equipment": undefined,
      "catalog_filter": Array [
        Object {
          "generation": "21745628",
          "mark": "AUDI",
          "model": "A5",
          "nameplate_name": "g_tron",
        },
      ],
      "category": "cars",
      "displacement_from": 3000,
      "displacement_to": 3000,
      "section": "used",
      "transmission": undefined,
    },
  },
  Object {
    "caption": "Audi A5 II (F5) Рестайлинг 3.0л 5-местный с пробегом",
    "name": "seats",
    "route": "listing",
    "urlParams": Object {
      "catalog_equipment": Array [
        "seats-5",
      ],
      "catalog_filter": Array [
        Object {
          "generation": "21745628",
          "mark": "AUDI",
          "model": "A5",
          "nameplate_name": "g_tron",
        },
      ],
      "category": "cars",
      "displacement_from": 3000,
      "displacement_to": 3000,
      "section": "used",
      "transmission": undefined,
    },
  },
]
`;

exports[`Должен вернуть ХК для: новая марка AUDI, модель A5, поколение II (F5) Рестайлинг 1`] = `
Array [
  Object {
    "caption": "Продажа автомобилей",
    "name": "index",
    "route": "index",
    "urlOptions": Object {
      "geoIds": Array [],
    },
    "urlParams": Object {
      "category": undefined,
      "section": undefined,
    },
  },
  Object {
    "caption": "Audi",
    "name": "mark",
    "route": "listing",
    "urlParams": Object {
      "category": "cars",
      "mark": "AUDI",
      "section": undefined,
    },
  },
  Object {
    "caption": "Новые Audi",
    "name": "mark-with-section",
    "route": "listing",
    "urlParams": Object {
      "category": "cars",
      "mark": "AUDI",
      "section": "new",
    },
  },
  Object {
    "caption": "Новые Audi A5",
    "name": "model",
    "route": "listing",
    "urlParams": Object {
      "category": "cars",
      "mark": "AUDI",
      "model": "A5",
      "section": "new",
    },
  },
  Object {
    "caption": "Новые Audi A5 II (F5) Рестайлинг",
    "name": "generation",
    "route": "listing",
    "urlParams": Object {
      "category": "cars",
      "generation": "21745628",
      "mark": "AUDI",
      "model": "A5",
      "section": "new",
    },
  },
  Object {
    "caption": "Audi A5 II (F5) Рестайлинг 3.0л Новые",
    "name": "displacement",
    "route": "listing",
    "urlParams": Object {
      "catalog_equipment": undefined,
      "catalog_filter": Array [
        Object {
          "generation": "21745628",
          "mark": "AUDI",
          "model": "A5",
          "nameplate_name": "g_tron",
        },
      ],
      "category": "cars",
      "displacement_from": 3000,
      "displacement_to": 3000,
      "section": "new",
      "transmission": undefined,
    },
  },
  Object {
    "caption": "Audi A5 II (F5) Рестайлинг 3.0л 5-местный Новые",
    "name": "seats",
    "route": "listing",
    "urlParams": Object {
      "catalog_equipment": Array [
        "seats-5",
      ],
      "catalog_filter": Array [
        Object {
          "generation": "21745628",
          "mark": "AUDI",
          "model": "A5",
          "nameplate_name": "g_tron",
        },
      ],
      "category": "cars",
      "displacement_from": 3000,
      "displacement_to": 3000,
      "section": "new",
      "transmission": undefined,
    },
  },
]
`;
